# devoteam-tech-interview

./: .gitignore  README.md  docker-compose.yml  nginx.conf  pyproject.toml
docs/: anomaly_detection.md  api_endpoints.md  database_schema.md  frontend_workflows.md  historical_analysis_chain.md  llm_analysis_workflow.md  validation_rules.md
notebooks/: dive_in.ipynb  pyproject.toml
streamlit_app/: Dockerfile  README.md  example_metrics.json  main.py  pyproject.toml
streamlit_app/components/: api_client.py  display.py
streamlit_app/pages/: 1_ingestion.py  2_analysis.py  3_dashboard.py
webservice/: Dockerfile  db.py  db_init.py  main.py  pyproject.toml
webservice/api/: analysis.py  anomalies.py  health.py  metrics.py
webservice/models/: analysis.py  anomaly.py  metrics.py  sql.py  validation.py
webservice/services/: anomaly_detection.py  llm_analysis.py  metrics_service.py  persistence.py  validation.py
webservice/tests/: test_analysis_api.py  test_anomalies_api.py  test_anomaly_detection.py  test_debug.py  test_health.py  test_llm_analysis.py  test_metrics.py  test_persistent_ingestion.py  test_validation.py
