[project]
name = "devoteam-entretien"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "numpy",
    "jupyter",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "streamlit>=1.46.1",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "httpx>=0.28.1",
]

