[project]
name = "devoteam-entretien"
version = "0.1.0"
description = "Infrastructure monitoring and optimization system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "numpy",
    "jupyter",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "streamlit>=1.46.1",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.28",
    "langsmith>=0.4.5",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "plotly>=6.2.0",
]

[tool.pytest.ini_options]
testpaths = ["webservice/tests"]
pythonpath = ["."]

