[project]
name = "infrastructure-monitoring-notebooks"
version = "0.1.0"
description = "Jupyter notebooks for infrastructure monitoring analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "numpy>=1.24.0",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "python-dotenv>=1.1.1",
] 