[project]
name = "infrastructure-monitoring-frontend"
version = "0.1.0"
description = "Streamlit frontend for infrastructure monitoring"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.46.1",
    "requests>=2.32.4",
    "plotly>=6.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
] 